# metadata_forensic_ai

./: .gitignore  ARCHITECTURE.md  INSTALLATION.md  MANIFEST.in  README.md  README_GITHUB.md  REQUIREMENTS_EXHAUSTIVE.md  app.py  debug_gps_resolution.py  final_check.py  forensic.py  forensic_config.yaml  forensicai.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  test_gemini.py  test_out.txt  test_screenshot_detection.py
config/: __init__.py  chatbox_prompt_corpus.json  default_config.yaml  forensic_rules.json
datasets/: README.md  dataset_config.yaml
publication/: JOURNAL_MANUSCRIPT_DRAFT.md
results/COMPLETE_ADDRESS_CHECK_20260319_191116/: IMG_20220619_145259_20260319_191118.html
results/FORENSIC_001_20260319_184349/: IMG_20220619_145259_20260319_184352.html  IMG_20220619_145259_20260319_184352.json  IMG_20220619_145259_20260319_184352.txt
results/session_20260327_011205/: test_whatsapp_20260327_011425.html  test_whatsapp_20260327_011425.txt
results/test_whatsapp_20260327_011014/: test_whatsapp_20260327_011015.json
root/: __init__.py
scripts/: batch_analyzer.py  create_results_structure.py  generate_sample_data.py  install_dependencies.sh  setup_forensic_env.py  validation_runner.py
scripts/analysis/: analyze_ai_evidence.py
scripts/dataset/: dataset_splitter.py  dataset_statistics.py  initialize_dataset.py
scripts/experiments/: create_gps_test_image.py  debug_gps.py  simulate_ai_image.py
scripts/verification/: verify_advanced.py  verify_gps_location.py  verify_phase3.py
src/: __init__.py  main.py
src/analysis/: __init__.py  artifact_analyzer.py  authenticity_analyzer.py  bayesian_scorer.py  contextual_analyzer.py  evidence_correlator.py  risk_scorer.py  timestamp_analyzer.py
src/core/: __init__.py  batch_processor.py  evidence_handler.py  forensic_analyzer.py  forensic_domain_manager.py  metadata_extractor.py  origin_detector.py
src/explanation/: __init__.py  explanation_engine.py
src/interface/: __init__.py  cli_assistant.py  natural_language_processor.py  web_interface.py
src/models/: __init__.py  compression_patterns.py  platform_fingerprints.py
src/reporting/: __init__.py  json_schema.py  report_generator.py
src/utils/: __init__.py  chain_of_custody.py  exiftool_formatter.py  exiftool_wrapper.py  file_validator.py  forensic_hasher.py  gps_resolver.py  logging_handler.py
tests/: __init__.py  test_evidence_correlator.py  test_evidence_handler.py  test_integration.py  test_main_origin_refinement.py  test_metadata_analyzer.py  test_natural_language_processor.py  test_origin_detector.py  test_report_generator.py  test_risk_scorer.py
tests/manual/: test_exiftool_wrapper.py  test_gps_resolution.py
tests/test_validation/: __init__.py  manipulated_images  validation.py
